@@ -88,6 +88,7 @@ chart <- new(acmacs.Chart, raw_data)
     layers from the chart. merging resulting (flattened) chart with
     other charts usually gives wrong result.}
 
+  \item{clone()}{chart is cloned by exporting it into ace (in memory) and re-reading it}
 }
 \section{Column bases}{
   Column bases is a propery of a projection. Formally, chart may contain
